Fixes for RHEL consollidated kickstart files

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_consolidated.cfg
@@ -181,6 +181,10 @@ if [ "$IS_ARM" == "true" ]; then
 else
     exec &> /dev/ttyS0
 fi
+
+# disabling google-cloud-sdk to install other packages include GCE specific packages
+dnf config-manager --set-disabled google-cloud-sdk
+
 if [ "${IS_EUS}" == "true" ] || [ "${IS_SAP}" == "true" ]; then
     echo "${VERSION_LOCK}" > /etc/dnf/vars/releasever
     if [ $? -eq 0 ]; then
@@ -203,9 +207,7 @@ else
 fi
 
 dnf -y install "$RHUI_PACKAGE_NAME"
-if [ "$IS_BYOS" == "true" || "$IS_ARM" == "true" ]; then
-  rpm -q "$RHUI_PACKAGE_NAME"
-fi
+rpm -q "$RHUI_PACKAGE_NAME"
 %end
 
 # Google Compute Engine kickstart config for Enterprise Linux 10.
@@ -228,32 +230,19 @@ if [ "$IS_ARM" == "true" ]; then
 else
     exec &> /dev/ttyS0
 fi
-if [ "$IS_BYOS" == "true" ]; then
-  dnf config-manager --set-disabled google-cloud-sdk
-fi
 
 INSTALL_PKGS=()
 
 if [ "${IS_BYOS}" != "true" ]; then
-    INSTALL_PKGS+=(
-    subscription-manager
-    rhc
-    insights-client
-    )
-else
-    # Cloud SDK
-    dnf config-manager --set-enabled google-cloud-sdk
+    dnf -y remove subscription-manager rhc insights-client
 fi
 
-if [ "${IS_LVM}" == "true" ]; then
-    INSTALL_PKGS+=(lvm2)
-else
+if [ "${IS_LVM}" != "true" ]; then
     INSTALL_PKGS+=(gce-disk-expand)
 fi
 
-# Base packages for all images
+# Guest OS Packages
 INSTALL_PKGS+=(
-google-cloud-cli
 google-compute-engine
 google-osconfig-agent
 )
@@ -265,6 +254,10 @@ if [ "${#UNIQUE_PKGS[@]}" -gt 0 ]; then
     dnf -y install "${UNIQUE_PKGS[@]}"
     rpm -q "${UNIQUE_PKGS[@]}"
 fi
+
+# Renabling Cloud SDK to install google-cloud-cli
+dnf config-manager --set-enabled google-cloud-sdk
+dnf -y install google-cloud-cli
 rpm -q google-cloud-cli
 %end
 
