--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_8_consolidated.cfg
@@ -93,6 +93,7 @@ python3
 rng-tools
 tar
 vim
+nvme-cli
 -alsa-utils
 -b43-fwcutter
 -dmraid
@@ -209,6 +210,7 @@ else
 fi
 
 dnf -y install "$RHUI_PACKAGE_NAME"
+rpm -q "$RHUI_PACKAGE_NAME"
 if [ "$IS_ARM" == "true" ]; then
   # Disable the eclipse dnf module which doesn't exist for aarch64.
   dnf -y module disable eclipse
@@ -239,22 +241,23 @@ fi
 
 INSTALL_PKGS=()
 
-if [ "${IS_ARM}" == "true" ]; then
-   INSTALL_PKGS+=(nvme-cli)
+if [ "${IS_ARM}" != "true" ]; then
+   dnf -y remove nvme-cli
 fi
 
-if [ "${IS_BYOS}" != "true" ]; then
-    INSTALL_PKGS+=(
-    subscription-manager
-    insights-client
-    )
-    if [ "${IS_SAP}" != "true" ] || [ "${VERSION_LOCK}" == "8.10" ]; then
-       INSTALL_PKGS+=(rhc)
-    fi
-else
-    if [ "${IS_ARM}" == "true" ]; then
-       INSTALL_PKGS+=(rhc)
-    fi
+if [ "${IS_BYOS}" == "true" ] && [ "${IS_ARM}" != "true" ]; then
+    dnf -y remove rhc
+fi
+if [ "${IS_SAP}" == "true" ] && [ "${VERSION_LOCK}" != "8.10" ]; then
+    dnf -y remove rhc
+fi
+
+if [ "${IS_BYOS}" != "true" ]; then 
+    dnf -y remove subscription-manager insights-client
+fi
+
+if [ "${IS_SAP}" != "true" ] && [ "${IS_LVM}" != "true" ]; then
+    dnf -y remove lvm2
 fi
 
 if [ "${IS_SAP}" == "true" ]; then
@@ -264,7 +267,6 @@ if [ "${IS_SAP}" == "true" ]; then
        google-cloud-sap-agent
        libatomic
        libtool-ltdl
-       lvm2
        numactl
        numactl-libs
        nfs-utils
@@ -280,9 +282,7 @@ if [ "${IS_SAP}" == "true" ]; then
    )
 fi
 
-if [ "${IS_LVM}" == "true" ]; then
-    INSTALL_PKGS+=(lvm2)
-else
+if [ "${IS_LVM}" != "true" ]; then
     INSTALL_PKGS+=(gce-disk-expand)
 fi
 
@@ -304,6 +304,7 @@ fi
 
 %post --erroronfail
 set -ex
+%include /run/install/isodir/kickstart_vars.cfg
 
 if [ "$IS_ARM" == "true" ]; then
     exec &> /dev/ttyAMA0
