--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_consolidated.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_consolidated.cfg
@@ -193,6 +193,10 @@ if [ "$IS_ARM" == "true" ]; then
 else
     exec &> /dev/ttyS0
 fi
+
+# disabling google-cloud-sdk to install other packages include GCE specific packages
+dnf config-manager --set-disabled google-cloud-sdk
+
 if [ "${IS_EUS}" == "true" ] || [ "${IS_SAP}" == "true" ]; then
     echo "${VERSION_LOCK}" > /etc/dnf/vars/releasever
     if [ $? -eq 0 ]; then
@@ -215,9 +219,7 @@ else
 fi
 
 dnf -y install "$RHUI_PACKAGE_NAME"
-if [ "$IS_BYOS" == "true" || "$IS_ARM" == "true" ]; then
-  rpm -q "$RHUI_PACKAGE_NAME"
-fi
+rpm -q "$RHUI_PACKAGE_NAME"
 %end
 
 # Google Compute Engine kickstart config for Enterprise Linux 9.
@@ -240,41 +242,29 @@ if [ "$IS_ARM" == "true" ]; then
 else
     exec &> /dev/ttyS0
 fi
-if [ "$IS_BYOS" == "true" ] && [ "$IS_ARM" != "true" ] && [ "$IS_SAP" != "true" ]; then
-  dnf config-manager --set-disabled google-cloud-sdk
-fi
 
 INSTALL_PKGS=()
 
+if [ "${IS_SAP}" == "true" ] && ([ "${VERSION_LOCK}" == "9.0" ] || [ "${VERSION_LOCK}" == "9.2" ]); then
+    dnf -y remove rhc insights-client
+fi
+
 if [ "${IS_BYOS}" != "true" ]; then
-    INSTALL_PKGS+=(subscription-manager)
-    if [ "${IS_SAP}" == "true" ]; then
-       if [ "${VERSION_LOCK}" != "9.0" ] && [ "${VERSION_LOCK}" != "9.2" ]; then
-              INSTALL_PKGS+=(
-              rhc
-              insights-client
-              )
-       fi
-    else
-       INSTALL_PKGS+=(
-       rhc
-       insights-client
-       )
-    fi
-else
-    # Cloud SDK
-    dnf config-manager --set-enabled google-cloud-sdk
+    dnf -y remove subscription-manager rhc
+fi
+
+if [ "${IS_SAP}" != "true" ] && [ "${IS_LVM}" != "true" ]; then
+    dnf -y remove lvm2
 fi
 
 if [ "${IS_SAP}" == "true" ]; then
-   iNSTALL_PKGS+=(
+   INSTALL_PKGS+=(
        chkconfig
        compat-openssl11
        fence-agents-gce
        google-cloud-sap-agent
        libatomic
        libtool-ltdl
-       lvm2
        numactl
        numactl-libs
        nfs-utils
@@ -290,15 +280,12 @@ if [ "${IS_SAP}" == "true" ]; then
    )
 fi
 
-if [ "${IS_LVM}" == "true" ]; then
-    INSTALL_PKGS+=(lvm2)
-else
+if [ "${IS_LVM}" != "true" ]; then
     INSTALL_PKGS+=(gce-disk-expand)
 fi
 
-# Base packages for all images
+# Guest OS Packages
 INSTALL_PKGS+=(
-google-cloud-cli
 google-compute-engine
 google-osconfig-agent
 )
@@ -310,6 +297,10 @@ if [ "${#UNIQUE_PKGS[@]}" -gt 0 ]; then
     dnf -y install "${UNIQUE_PKGS[@]}"
     rpm -q "${UNIQUE_PKGS[@]}"
 fi
+
+# Renabling Cloud SDK to install google-cloud-cli
+dnf config-manager --set-enabled google-cloud-sdk
+dnf -y install google-cloud-cli
 rpm -q google-cloud-cli
 %end
 
@@ -374,7 +365,7 @@ sed -i'' -e '/PermitRootLogin prohibit-password/s/^.*/PermitRootLogin no/' /etc/
 # Update all packages.
 dnf -y update
 
-if [ "${IS_SAP}" == "true" ] %% [ "${IS_BYOS}" != "true" ]; then
+if [ "${IS_SAP}" == "true" ] && [ "${IS_BYOS}" != "true" ]; then
        # Remove subscription manager which is a weak dependency of the SAP specific packages.
        dnf -y remove subscription-manager
 fi
